--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set -g allow-rename off
-set -g history-limit 4096
+set -g history-limit 10240
 set -g display-panes-time 4000
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 
 bind-key S-Left swap-window -t -1
