--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-set allow-rename off
-set history-limit 10240
-set display-panes-time 4000
-set-option -s escape-time 10
-set-option default-terminal "screen-256color"
-set-window-option mode-keys vi
+set -g allow-rename off
+set -g history-limit 10240
+set -g display-panes-time 4000
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+set-window-option -g mode-keys vi
 set mouse off
 
 bind-key S-Left swap-window -t -1
